--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,13 @@
+
 <!DOCTYPE html>
 
 
 
-
+<html>
+  <head>
+    <meta name="baidu-site-verification" content="B5smi6jaYM" />
+    <title>My title</title>
+  </head>
 
 
 
